fix: overflow of steps main track

--- a/src/styles/steps.css
+++ b/src/styles/steps.css
@@ -315,15 +315,12 @@ x = 1045302.150 / (4496.413 - y)
   height: 100%;
   /* border: 1px solid black;*/
 }
-
-.steps__track > path {
-  stroke-width: 4px;
-}
-
 .steps__track > .steps__main-track {
   stroke: var(--primary-light);
+  stroke-width: 4px;
 }
 
 .steps__track-mask {
   stroke: var(--white);
+  stroke-width: 5px;
 }
